[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hanami-api"
version = "0.1.0"
description = "API de Análise de Dados com FastAPI e Pandas"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Matheus Moreira Lima" }
]

dependencies = [
    # API
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",

    # Data
    "pandas>=2.1,<3.0",
    "openpyxl>=3.1,<4.0",

    # Upload de arquivos
    "python-multipart>=0.0.9",

    # Validação e parsing
    "python-dateutil>=2.9",

    # Logs
    "loguru>=0.7",

    # Configuração por ambiente
    "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.26",
    "ruff>=0.3"
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
